--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
+    "@hookform/resolvers": "^1.3.7",
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/netinfo": "^5.9.7",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.3",
+    "expo": "~40.0.0",
+    "expo-splash-screen": "^0.10.2",
+    "expo-status-bar": "~1.0.3",
+    "firebase": "^7.9.0",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-hook-form": "^6.15.5",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animated-nav-tab-bar": "^3.1.4",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.3",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-ui-lib": "^5.21.0",
+    "react-native-vector-icons": "^8.1.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
