--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-splash-screen": "^0.10.2",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
@@ -30,6 +31,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.1.9",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-ui-lib": "^5.21.0",
     "react-native-vector-icons": "^8.1.0",
     "yup": "^0.32.9"
