--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/netinfo": "^5.9.7",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.3",
@@ -29,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animated-nav-tab-bar": "^3.1.4",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-snap-carousel": "^3.9.1",
