--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "^1.3.7",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/netinfo": "^5.9.7",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-picker/picker": "^1.16.3",
@@ -18,7 +18,9 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-permissions": "~10.0.0",
     "expo-splash-screen": "^0.10.2",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
@@ -29,6 +31,7 @@
     "react-hook-form": "^6.15.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animated-nav-tab-bar": "^3.1.4",
+    "react-native-calendars": "^1.1259.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.3",
