--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animated-nav-tab-bar": "^3.1.4",
     "react-native-calendars": "^1.1259.0",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.3",
