--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "minkanamovil",
+    "name": "Minkana",
     "slug": "minkanamovil",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/simple-logo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/logo-minkana-saturato.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
