--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
         "CAMERA_ROLL",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE"
-      ]
+      ],
+      "package": "com.eddyhipo.minkanamovil"
     },
     "web": {
       "favicon": "./assets/favicon.png"
