--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.3",
-    "expo": "~40.0.0",
+    "expo": "~42.0.1",
     "expo-image-picker": "~9.2.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-permissions": "~10.0.0",
@@ -29,7 +29,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.15.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animated-nav-tab-bar": "^3.1.4",
     "react-native-calendars": "^1.1259.0",
     "react-native-chart-kit": "^6.11.0",
@@ -40,6 +40,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-ui-lib": "^5.21.0",
     "react-native-vector-icons": "^8.1.0",
+    "unimodules-permissions-interface": "^6.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
