--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "Minkana",
-    "slug": "minkanamovil",
-    "version": "1.0.0",
+    "slug": "minkanamovi",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/simple-logo.png",
     "splash": {
@@ -20,6 +20,7 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 2,
       "adaptiveIcon": {
         "foregroundImage": "./assets/simple-logo.png",
         "backgroundColor": "#FFFFFF"
@@ -29,7 +30,7 @@
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE"
       ],
-      "package": "com.eddyhipo.minkanamovil"
+      "package": "com.eddyhipo.minkanamovi"
     },
     "web": {
       "favicon": "./assets/favicon.png"
